feat: セッションID抽出メソッドを分離